...
) {
    Column(
        modifier = modifier
            .padding(16.dp)
    ) {
        TextSmallDesign(text = "VIGIA: $descrVigia")
        TextSmallDesign(text = "LOCAL: $descrLocal")
        TitleListWithDetailDesign(text = "MENU")
        LazyColumn {
            item {
                ItemListDesign(
                    text = "MOV. VEÍCULO PRÓPRIO",
                    setActionItem = onNavMovVeicProprio
                )
            }
            item {
                ItemListDesign(
                    text = "MOV. VEÍCULO VISITANTE/TERCEIRO",
...
@Composable
fun DefaultPreview() {
    PCPCompTheme {
        Scaffold(modifier = Modifier.fillMaxSize()) { innerPadding ->
            MenuApontContent(
                descrVigia = "1975 - ANDERSON",
                descrLocal = "1 - USINA",
                flagDialog = false,
                setCloseDialog = {},
                failure = "",
                onNavMovVeicProprio = {},
                onNavMovVeicVisitTerc = {},
                onNavMovVeicResidencia = {},
...
