...
    modifier: Modifier = Modifier
) {
    Column(
        modifier = modifier
            .padding(16.dp)
    ) {
        TitleDesign(text = "NOME VIGIA")
        Column(
            horizontalAlignment = Alignment.CenterHorizontally,
            verticalArrangement = Arrangement.Center,
            modifier = Modifier
                .fillMaxWidth()
                .weight(1f)
...
@Preview(showBackground = true)
@Composable
fun NomeVigiaPagePreview() {
    PCPCompTheme {
        Scaffold(modifier = Modifier.fillMaxSize()) { innerPadding ->
            NomeVigiaContent(
                nomeVigia = "ANDERSON DA SILVA DELGADO",
                flagDialog = false,
                setCloseDialog = {},
                failure = "",
                onNavMatricVigia = {},
                onNavLocal = {},
                modifier = Modifier.padding(innerPadding)
...
